// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PanelGroup/ToggleIcon should render a toggle icon when the panel is closed 1`] = `
".a {
  flex-shrink: 0;
}
.b {
  width: 1.25rem;
}
.c {
  height: 1.25rem;
}
.d {
  margin-left: auto;
}
.e {
  background-image: url("/chevron-down.svg");
}
.f {
  background-repeat: no-repeat;
}
.g {
  background-size: 1.25rem;
}
.l {
  transition-property: transform;
}
.m {
  transition-duration: 0.2s;
}
.n {
  transition-delay: ease-in-out;
}
.o {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .h {
    transition-property: none;
  }
  .i {
    transition-duration: 0s;
  }
  .j {
    transition-delay: 0s;
  }
  .k {
    transition-timing-function: ease;
  }
}


<div
  data-testid="panel-group-toggle-icon"
  class="a b c d e f g h i j k l m n o"
></div>
;
"
`;

exports[`components/PanelGroup/ToggleIcon should render a toggle icon when the panel is open 1`] = `
".a {
  flex-shrink: 0;
}
.b {
  width: 1.25rem;
}
.c {
  height: 1.25rem;
}
.d {
  margin-left: auto;
}
.e {
  background-image: url("/chevron-down.svg");
}
.f {
  background-repeat: no-repeat;
}
.g {
  background-size: 1.25rem;
}
.l {
  transform: rotate(-180deg);
}
.m {
  transition-property: transform;
}
.n {
  transition-duration: 0.2s;
}
.o {
  transition-delay: ease-in-out;
}
.p {
  transition-timing-function: ease;
}
@media (prefers-reduced-motion: reduce) {
  .h {
    transition-property: none;
  }
  .i {
    transition-duration: 0s;
  }
  .j {
    transition-delay: 0s;
  }
  .k {
    transition-timing-function: ease;
  }
}


<div
  data-testid="panel-group-toggle-icon"
  class="a b c d e f g h i j k l m n o p"
></div>
;
"
`;
